--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "nanoid": "^3.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-paper": "^4.12.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
