--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^4.12.1",
     "react-native-web": "0.17.7"
   },
