--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tenzies-expo",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "homepage": "http://yahyabagia.github.io/tenzies-expo",
   "scripts": {
@@ -9,12 +9,14 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
+    "expo-publish": "expo publish",
     "deploy": "gh-pages -d web-build",
     "predeploy": "expo build:web"
   },
   "dependencies": {
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.1",
     "nanoid": "^3.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -28,5 +30,5 @@
     "@babel/core": "^7.12.9",
     "gh-pages": "^4.0.0"
   },
-  "private": true
+  "private": false
 }
