--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^4.12.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-timer-hook": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
