--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "predeploy": "expo build:web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.1",
     "nanoid": "^3.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hooks-global-state": "^2.0.0-rc.0",
     "react-native": "0.68.2",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^4.12.1",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-web": "0.17.7",
     "react-timer-hook": "^3.0.5"
   },
