--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~45.0.0",
+    "expo-av": "~11.2.3",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.1",
     "nanoid": "^3.3.4",
