--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "background_color": "#ffffff",
+  "background_color": "#F1C232",
   "display": "standalone",
   "lang": "en",
   "name": "tenzies-expo",
