--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hooks-global-state": "^2.0.0-rc.0",
+    "react-hotkeys-hook": "^3.4.6",
     "react-native": "0.68.2",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-get-random-values": "~1.8.0",
