--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "tenzies-expo",
-  "version": "0.0.1",
-  "main": "node_modules/expo/AppEntry.js",
-  "homepage": "http://yahyabagia.github.io/tenzies-expo",
+  "version": "1.0.0",
+  "main": "main.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,28 +13,28 @@
     "predeploy": "expo build:web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "expo": "~45.0.0",
-    "expo-av": "~11.2.3",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
-    "nanoid": "^3.3.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hooks-global-state": "^2.0.0-rc.0",
-    "react-hotkeys-hook": "^3.4.6",
-    "react-native": "0.68.2",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "expo": "~48.0.11",
+    "expo-av": "~13.2.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "nanoid": "^4.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hooks-global-state": "^2.1.0",
+    "react-hotkeys-hook": "^4.4.0",
+    "react-native": "0.71.6",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-get-random-values": "~1.8.0",
-    "react-native-paper": "^4.12.1",
+    "react-native-paper": "^5.6.0",
+    "react-native-safe-area-context": "^4.5.1",
     "react-native-segmented-control-tab": "^4.0.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.10",
     "react-timer-hook": "^3.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "gh-pages": "^4.0.0"
+    "@babel/core": "^7.20.0"
   },
-  "private": false
+  "private": true
 }
