--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,8 @@
 {
-  "background_color": "#F1C232",
+  "background_color": "#ffffff",
   "display": "standalone",
   "lang": "en",
   "name": "tenzies-expo",
   "short_name": "tenzies-expo",
-  "start_url": "/?utm_source=web_app_manifest",
-  "icons": [
-    {
-      "src": "/tenzies-expo/pwa/chrome-icon/chrome-icon-144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/tenzies-expo/pwa/chrome-icon/chrome-icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/tenzies-expo/pwa/chrome-icon/chrome-icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "start_url": "/?utm_source=web_app_manifest"
 }
