--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenzies-expo",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "index.js",
   "homepage": "http://yahyabagia.github.io/tenzies-expo",
   "scripts": {
     "start": "expo start",
@@ -18,18 +18,17 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.11",
     "expo-av": "~13.2.1",
+    "expo-crypto": "~12.2.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
-    "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hooks-global-state": "^2.1.0",
     "react-hotkeys-hook": "^4.4.0",
     "react-native": "0.71.6",
     "react-native-confetti-cannon": "^1.5.2",
-    "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^5.6.0",
-    "react-native-safe-area-context": "^4.5.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-web": "~0.18.10",
     "react-timer-hook": "^3.0.5"
