--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~48.0.11",
     "expo-av": "~13.2.1",
     "expo-crypto": "~12.2.1",
+    "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
