--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-hooks-global-state": "^2.1.0",
     "react-hotkeys-hook": "^4.4.0",
