--- a/package.json
+++ b/package.json
@@ -1,43 +1,59 @@
 {
-  "name": "tenzies-expo",
+  "name": "tenzies",
+  "main": "expo-router/entry",
   "version": "1.0.0",
-  "main": "index.js",
-  "homepage": "http://yahyabagia.github.io/tenzies-expo",
   "scripts": {
     "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "expo-publish": "expo publish",
-    "deploy": "gh-pages -d web-build",
-    "predeploy": "expo export:web"
+    "test": "jest --watchAll",
+    "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "expo": "~48.0.11",
-    "expo-av": "~13.2.1",
-    "expo-crypto": "~12.2.1",
-    "expo-font": "~11.1.1",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.4",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^6.0.2",
+    "expo": "~51.0.17",
+    "expo-av": "~14.0.6",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-font": "~12.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.17",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.6",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-hooks-global-state": "^2.1.0",
-    "react-hotkeys-hook": "^4.4.0",
-    "react-native": "0.71.6",
+    "react-hotkeys-hook": "^4.5.0",
+    "react-native": "0.74.2",
     "react-native-confetti-cannon": "^1.5.2",
-    "react-native-paper": "^5.6.0",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-segmented-control-tab": "^4.0.0",
-    "react-native-web": "~0.18.10",
-    "react-timer-hook": "^3.0.5"
+    "react-native-web": "~0.19.10",
+    "react-timer-hook": "^3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "gh-pages": "^5.0.0"
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.3",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
