Github pages configuration updated

--- a/app.json
+++ b/app.json
@@ -22,12 +22,13 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "single",
+      "output": "static",
       "favicon": "./assets/favicon.png"
     },
     "plugins": ["expo-router"],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "baseUrl": "/tenzies-expo"
     }
   }
 }
