--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "deploy": "gh-pages -t -d dist",
+    "predeploy": "yarn build-web",
+    "build-web": "expo export -p web"
   },
   "jest": {
     "preset": "jest-expo"
@@ -50,6 +53,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "gh-pages": "^6.1.1",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
