--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "deploy": "gh-pages -t -d dist",
-    "predeploy": "yarn build-web",
-    "build-web": "expo export -p web"
+    "build-web": "expo export -p web && npx workbox-cli generateSW workbox-config.js"
   },
   "jest": {
     "preset": "jest-expo"
