--- a/app.json
+++ b/app.json
@@ -25,7 +25,12 @@
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser",
+      "expo-audio"
+    ],
     "experiments": {
       "typedRoutes": true,
       "baseUrl": "/tenzies-expo"
