--- a/package.json
+++ b/package.json
@@ -18,45 +18,45 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.17",
-    "expo-av": "~14.0.6",
-    "expo-constants": "~16.0.2",
-    "expo-crypto": "~13.0.2",
-    "expo-font": "~12.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo": "^53.0.0",
+    "expo-audio": "~0.4.8",
+    "expo-av": "~15.1.7",
+    "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
+    "expo-font": "~13.3.2",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
+    "react": "19.0.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "18.2.0",
-    "react-hooks-global-state": "^2.1.0",
+    "react-dom": "19.0.0",
     "react-hotkeys-hook": "^4.5.0",
-    "react-native": "0.74.2",
+    "react-native": "0.79.5",
     "react-native-confetti-cannon": "^1.5.2",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-segmented-control-tab": "^4.0.0",
-    "react-native-web": "~0.19.10",
-    "react-timer-hook": "^3.0.7"
+    "react-native-web": "^0.20.0",
+    "react-timer-hook": "^3.0.7",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "gh-pages": "^6.1.1",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~53.0.9",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
