Refactoring: - Animations added to `Dice` and `StickyTopButton`. - Dice animation config added in `SettingsModal`. - `title` added to the `StickyTopButton` component. - Prop `title` changed to `number` for `Dice`. - Bugfix: Resetting missed dices and rolls upon resetting `noOfRolls`. - Unit testing added with `@testing-library/react-native`

--- a/app.json
+++ b/app.json
@@ -6,11 +6,6 @@
     "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "ios": {
       "supportsTablet": true
     },
@@ -29,7 +24,15 @@
       "expo-router",
       "expo-font",
       "expo-web-browser",
-      "expo-audio"
+      "expo-audio",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/splash.png",
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
