--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "gh-pages": "^6.1.1",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.9",
-    "react-test-renderer": "18.2.0",
     "typescript": "~5.8.3"
   },
   "private": true
